--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
             <button id="send-button">Send</button>
         </div>
     </div>
-
+<button class="basic-button"
+        ng-click="">
+    I'm a button
+</button>
+<a class="basic-button"
+   href="#"
+   role="button">
+    I'm a link with button styling
+</a>
     <script>
         const messageInput = document.getElementById('message-input');
         const sendButton = document.getElementById('send-button');
