--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
     </div>
 <button class="basic-button"
         ng-click="">
-    I'm a button
+    Login
 </button>
 <a class="basic-button"
-   href="#"
-   role="button">
-    I'm a link with button styling
+   href="#1237c9"
+   role="Login">
 </a>
     <script>
         const messageInput = document.getElementById('message-input');
