--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     </style>
 </head>
 <body>
+    <button class="basic-button"
+        ng-click="">
+    Login
+</button>
+<a class="basic-button"
+   href="#1237c9"
+   role="Login1">
     <div class="chat-container">
         <div class="chat-header">Chat med Gemini AI</div>
         <div class="chat-messages" id="chat-messages"></div>
@@ -26,13 +33,6 @@
             <button id="send-button">Send</button>
         </div>
     </div>
-<button class="basic-button"
-        ng-click="">
-    Login
-</button>
-<a class="basic-button"
-   href="#1237c9"
-   role="Login">
 </a>
     <script>
         const messageInput = document.getElementById('message-input');
